2022年9月23日学习

--- a/Django/6.Vue.md
+++ b/Django/6.Vue.md
@@ -1,8 +1,70 @@
 ## Vue
+#### 一、创建应用
+1. 应用实例
+    * 通过`createApp`创建应用实例
+        ```JavaScript
+            import { createApp } from 'vue'
+
+            const app = createApp({
+                // 根组件选项
+            })
+        ```
+2. 根组件
+    * 传入`createApp`的对象是组件，每个应用都需要一个根组件，其他组件作为子组件
+3. 挂载应用
+    * 应用实例在调用了`.mount()`后才会渲染出来
+    * `mount()`接收“容器”作为参数，可以是一个DOM元素或者CSS选择器字符串
+        ```JavaScript
+            <div id="app"></div>
+            app.mount('#app')
+        ```
+    * 应用根组件内容会被渲染在挂载的容器元素中，容器元素自身不会被视为应用的一部分
+    * `.mount()`方法应该始终在整个应用配置和资源注册完成后被调用
+4. 应用配置
+    * 应用实例可通过`.config()`来配置一些应用级的选项
+   
+### 二、模板语法
+1. 文本插值
+    * 使用双大括号
+        ```JavaScript
+        <p>Message: {{ msg }}</p>
+        ```
+2. 原始HTML
+    * `v-html`
+        ```JavaScript
+        <p>Using v-html: <span v-html="rawHtml"></span></p>
+        ```
 1. attribute绑定
-    ```JavaScript
+    * 使用`v-bind`
+        ```JavaScript
         <div v-bind:id="id"></div>
-    ```
+        // 简写
+        <div :id="id"></div>
+        ```
+    * 布尔attribute
+        * 根据true/false决定attribute是否应该存在于该元素上
+        ```JavaScript
+        <button :disabled="isButtonDisabled">Button</button>
+        ```
+        * 当 isButtonDisabled 为真值或一个空字符串 (即`<button disabled="">`) 时，元素会包含这个 disabled attribute。而当其为其他假值时 attribute 将被忽略。
+    * 动态绑定多个值
+        ```JavaScript
+        ...
+        data() {
+            objectOfAttrs: {
+                id: 'container',
+                class: 'wrapper',
+            }
+        }
+        ...
+        // 使用不带参数的v-bind
+        <div v-bind="objectOfAttrs"></div>
+        ```
+    
+
+
+
+
 1. 事件监控
     ```JavaScript
         <div v-on:click="add"></div>
@@ -85,4 +147,50 @@
             }
         }
     ```
+1. 组件
+    ```JavaScript
+        <script>
+            import ChildComp from './ChildComp.vue'
+
+            export default {
+                components: {
+                    ChildComp,
+                }
+            }
+        </script>
+
+        <template>
+            <ChildComp></ChildComp>
+        </template>
+    ```
+1. Props
+    * 子组件可通过props从父组件接收动态数据
+    ```JavaScript
+        // 子组件中
+        export default {
+            props: {
+                msg: String
+            }
+        }
+    ```
+    * 声明后，`msg`prop暴露在`this`上，子组件能在模板中使用
+    * 父组件中可以使用`v-bind`语法给prop传递动态值
+1. Emits
+    * 子组件向父组件触发事件
+    ```JavaScript
+        export default {
+            // 声明触发的时间
+            emits: ['response'],
+            created() {
+                // 带参数触发
+                this.$emit('response', 'hello from child')
+            }
+        }
+    ```
+    * 父组件可使用`v-on`监听子组件触发的事件
+    ```JavaScript
+        <ChildComp @response="(msg) => ChildMsg = msg" />
+    ```
+1. 插槽（slots）
+    * 父组件将模板片段传给子组件
 
