2022年9月25日 学习

--- a/Django/6.Vue.md
+++ b/Django/6.Vue.md
@@ -1,5 +1,5 @@
 ## Vue
-#### 一、创建应用
+### 一、创建应用
 1. 应用实例
     * 通过`createApp`创建应用实例
         ```JavaScript
@@ -60,10 +60,150 @@
         // 使用不带参数的v-bind
         <div v-bind="objectOfAttrs"></div>
         ```
+    * JavaScript表达式
+        * `{{ 表达式 }}` 同文本插值使用双大括号
+        * Vue指令中使用（以v-开头的特殊attribute中）
+        * 仅支持单一表达式，条件控制不支持，可使用三元表达式
+        * 可调用函数
+    * 指令Directives
+        * 指令指带有`v-`前缀的特殊attribute，如`v-bind`，`v-html`等
+        * 动态参数
+            * 使用`[]`
+            ```JavaScript
+            <a v-bind:[attributeName]>...</a>
+            <a @[eventName]>...</a>
+            ```
+            * `[]`里面的参数应当是字符串或null
+        * 修饰符
+            * 如`v-on@submit.prevent`
+### 三、响应式基础
+1. 声明响应式状态
+    * 使用`data`选项来声明
+1. 声明方法
+    * `methods`选项
+        ```JavaScript
+        export default {
+            data() {
+                count: 0,
+            },
+            methods: {
+                // 
+                increment() {
+                    this.count++
+                }
+            },
+            mounted() {
+                this.increment()
+            }
+        }
+        ``
+    * `methods`里的方法不应用箭头函数定义，因为箭头函数无`this`上下文
+1. 声明周期钩子
+    * `mounted`,`created`
+### 计算属性
+1. `computed()` 选项来定义
+    ```JavaScript
+        export default {
+        // ...
+            computed: {
+                filteredTodos() {
+                // 根据 `this.hideCompleted` 返回过滤后的 todo 项目
+                }
+            }
+        }
+    ```
+2. 计算属性会自动跟踪其计算中所使用的到的其他响应式状态，并将它们收集为自己的依赖。计算结果会被缓存，依赖发生改变时会被自动更新。
+3. 计算属性缓存VS方法
+    * 计算属性基于响应式依赖而被缓存，仅在响应式依赖更新时才重新计算，即响应式依赖若无变化，无论访问多少次，都返回原先的缓存
+    * 方法在重渲染时总会执行
+4. 可写计算属性
+    * 计算属性实现可写，需提供`getter`和`setter`
+    ```JavaScript
+    export default{
+        data() {
+            return {
+                firstName: 'John',
+                lastName: 'Doe',
+            }
+        },
+        computed: {
+            fullName: {
+                get() {
+                    return this.firstName + ' ' + this.lastName
+                },
+                set(newValue) {
+                    [this.firstName, this.lastName] = newValue.split(' ')
+                }
+            }
+        }
+    }
+1. **计算属性中不要有异步请求或修改DOM**
+### 五、Class与Style绑定
+1. 绑定HTML class
+    * class与其他属性配合
+    ```JavaScript
+    // script
+    data() {
+        return {
+            isActive: true,
+            hasError: false,
+        }
+    }
+    // template
+    <div 
+        class="static" 
+        :class="{ active: isActive, 'text-danger': hasError }">
+    </div>
+    ```
+    * 使用**计算属性**(常用)
+    ```JavaScript
+    data() {
+        return {
+            isActive: true,
+            error: null
+    }
+    },
+    computed: {
+        classObject() {
+            return {
+            active: this.isActive && !this.error,
+            'text-danger': this.error && this.error.type === 'fatal'
+            }
+        }
+    }
+    ```
+    * class属性绑定数组来渲染多个CSS class
+    ```JavaScript
+    data () {
+        return {
+            classA: '',
+            classB: '',
+        }
+    }
+
+    <div :class="[classA, classB]"></div>
+    ```
     
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+=================================
+### 其他
 
 1. 事件监控
     ```JavaScript
@@ -96,19 +236,7 @@
             this.todos = this.todos.filter(...)
             // 取出todos中tag为true的元素
             // this.todos = this.todos.filter((t) => t.tag !== false)
-1. 计算属性
-    ```JavaScript
-        export default {
-        // ...
-            computed: {
-                filteredTodos() {
-                // 根据 `this.hideCompleted` 返回过滤后的 todo 项目
-                }
-            }
-        }
-    ```
-    * `computed()` 选项来定义
-    * 计算属性会自动跟踪其计算中所使用的到的其他响应式状态，并将它们收集为自己的依赖。计算结果会被缓存，依赖发生改变时会被自动更新。
+
 1. 模板引用和生命周期
     ```JavaScript
         <p ref="p">hello</p>
