2022年9月27日学习

--- a/Django/6.Vue.md
+++ b/Django/6.Vue.md
@@ -22,7 +22,7 @@
     * `.mount()`方法应该始终在整个应用配置和资源注册完成后被调用
 4. 应用配置
     * 应用实例可通过`.config()`来配置一些应用级的选项
-   
+--------------------------------   
 ### 二、模板语法
 1. 文本插值
     * 使用双大括号
@@ -76,6 +76,7 @@
             * `[]`里面的参数应当是字符串或null
         * 修饰符
             * 如`v-on@submit.prevent`
+----------------------------     
 ### 三、响应式基础
 1. 声明响应式状态
     * 使用`data`选项来声明
@@ -99,8 +100,9 @@
         ``
     * `methods`里的方法不应用箭头函数定义，因为箭头函数无`this`上下文
 1. 声明周期钩子
-    * `mounted`,`created`
-### 计算属性
+    * `mounted`,`created`  
+------------------------
+### 四、计算属性
 1. `computed()` 选项来定义
     ```JavaScript
         export default {
@@ -118,72 +120,532 @@
     * 方法在重渲染时总会执行
 4. 可写计算属性
     * 计算属性实现可写，需提供`getter`和`setter`
-    ```JavaScript
-    export default{
+        ```JavaScript
+        export default{
+            data() {
+                return {
+                    firstName: 'John',
+                    lastName: 'Doe',
+                }
+            },
+            computed: {
+                fullName: {
+                    get() {
+                        return this.firstName + ' ' + this.lastName
+                    },
+                    set(newValue) {
+                        [this.firstName, this.lastName] = newValue.split(' ')
+                    }
+                }
+            }
+        }
+        ```
+1. **计算属性中不要有异步请求或修改DOM**
+--------------------
+### 五、Class与Style绑定
+1. 绑定HTML class
+    * class与其他属性配合
+        ```JavaScript
+        // script
         data() {
             return {
-                firstName: 'John',
-                lastName: 'Doe',
+                isActive: true,
+                hasError: false,
             }
+        }
+        // template
+        <div 
+            class="static" 
+            :class="{ active: isActive, 'text-danger': hasError }">
+        </div>
+        ```
+    * 使用**计算属性**(常用)
+        ```JavaScript
+        data() {
+            return {
+                isActive: true,
+                error: null
+        }
         },
         computed: {
-            fullName: {
-                get() {
-                    return this.firstName + ' ' + this.lastName
-                },
-                set(newValue) {
-                    [this.firstName, this.lastName] = newValue.split(' ')
+            classObject() {
+                return {
+                active: this.isActive && !this.error,
+                'text-danger': this.error && this.error.type === 'fatal'
+                }
+            }
+        }
+        ```
+    * class属性绑定数组来渲染多个CSS class
+        ```JavaScript
+        data () {
+            return {
+                classA: '',
+                classB: '',
+            }
+        }
+
+        <div :class="[classA, classB]"></div>
+        ```
+2. 绑定内联样式
+    * 绑定对象
+        ```JavaScript
+        data() {
+            return {
+                activeColor: 'red',
+                fontSize: 30,
+            }
+        }
+        ```
+        ```JavaScript
+        <div style="{ color: activeColor, fontSize: fontSize + 'px' }"></div>
+        ```
+    * 绑定样板对象
+        ```JavaScript
+        data() {
+            return {
+                styleObject: {
+                    activeColor: 'red',
+                    fontSize: 30,
+                }
+            }
+        }
+        ```
+        ```JavaScript
+        <div style="styleObject"></div>
+        ```
+    * 与class类似，可以使用计算属性进行绑定
+    * 绑定数组
+        ```JavaScript
+        <div :style="[style1, style2]"></div>
+        ```
+---------------------------
+### 六、条件渲染
+1. `v-if` & `v-else-if` & `v-else`
+    ```JavaScript
+    <div v-if="type === A">A</div>
+    <div v-else-if="type === B">B</div>
+    <div v-else>Not A OR B</div>
+    ```
+2. `v-show`
+    * 在DOM渲染中保留元素
+    * 仅切换该元素上名为display的CSS属性
+3. `v-if`与`v-show`对比
+    * 后续补充
+### 七、列表渲染
+1. `v-for`
+    * 遍历
+        ```JavaScript
+        data() {
+            return {
+                items: [{msg: 'foo'}, {msg: 'bar'}]
+            }
+        }
+        ```
+        ```JavaScript
+        <ul>
+            <li v-for="item in items">
+            // 也可以使用of代替in
+                {{ item.msg }}
+            </li>
+        </ul>
+        ```
+    * `v-for`支持可选参数--位置索引
+        ```JavaScript
+        <li v-for="(item, index) in items">
+            {{ index }} - {{ item.msg }}
+        </li>
+        ```  
+    * 遍历对象
+        ```JavaScript
+        data() {
+            return {
+                myObject: {
+                title: 'How to do lists in Vue',
+                author: 'Jane Doe',
+                publishedAt: '2016-04-10'
+                }
+            }
+        }
+        ```
+        ```JavaScript
+        <li v-for="value in myObject">
+            {{ value }}
+        </li>
+
+        <li v-for="(value, key) in myObject">
+            {{ key }} : {{ value }}
+        </li>
+
+        <li v-for="(value, key, index) in myObject">
+            {{ index }}.{{ key }} : {{ value }}
+        </li>
+        ``` 
+    * `v-for`接收整数值时，默认从1开始
+    * `v-for`与`v-if`不推荐同时使用，若在同一节点使用时，`v-if`优先级更高
+2. 通过Key管理状态
+    * 提供唯一的`key`attribute
+        ```JavaScript
+        <div v-for="item in items" :key="item.id"></div>
+        ```
+        ```JavaScript
+        <ul v-for="todo in todos" :key="todo.name">
+            <li>{{  todo.name }}</li>
+        </ul>
+        ```
+3. 数组变化
+    * 变更方法：在原数组上改动
+        * `push()`
+        * `pop()`
+        * `shift()`
+        * `unshift()`
+        * `splice()`
+        * `sort()`
+        * `reverse()`
+    * 替换方法：不更改原数组，返回一个新数组
+        * `filter()`
+        * `concat()`
+        * `slice()`
+        ```JavaScript
+        this.items = this.items.filter((item) => item.flag === true)
+        ```
+-----------------------
+### 七、事件监控
+1. 监听事件
+    * `v-on`指令（简写`@`)监听DOM事件
+    * `v-on:clicl="methodName"`或`@click="handler"`
+    * 事件处理器
+        * 内联事件处理器：事件被触发时执行的内联JavaScript语句
+        * 方法事件处理器：一个指向组件上定义的方法的属性名或是路径
+2. 内联事件处理器
+    * 通常用于简单场景
+        ```JavaScript
+        data() {
+            return {
+                count: 0
+            }
+        }
+        ```
+        ```JavaScript
+        <button @click="count++">ADD 1</button>
+        <p>Count is: {{ count }}</p>
+        ```
+3. 方法事件处理器
+    * 应对复杂逻辑事件
+        ```JavaScript
+        data() {
+            return {
+                name: 'Vue.js'
+            }
+        },
+        methods: {
+            greet(event) {
+                alert('Hello ${this.name}')
+                if (event) {
+                    alert(event.target.tagName)
+                }
+            }
+        }
+        ```
+        ```JavaScript
+        <button @click="greet">Greet</button>
+        ```
+    * 方法与内联事件判断
+        ？？？
+4. 事件修饰符
+    * `.stop`
+    * `.prevent`
+    * `.self`
+    * `.capture`
+    * `.once`
+    * `.passive`
+5. 按键修饰符
+    * 系统按键修饰符
+        * `.enter`
+        * `.tab`
+        * `.delete`（捕获“Delete”和“Backspace”）
+        * `.esc`
+        * `.up`
+        * `.down`
+        * `.left`
+        * `.right`
+        * `.ctrl`
+        * `.alt`
+        * `.shift`
+        * `.meta`
+        ```JavaScript
+        <!-- Alt + Enter -->
+        <input @keyup.alt.enter="clear" />
+
+        <!-- Ctrl + 点击 -->
+        <div @click.ctrl="dosomething">Do something</div>
+        ```
+    * `.exact`修饰符
+        * 允许控制触发一个事件所需的确定组合
+            ```JavaScript
+            <!-- 当按下 Ctrl 时，即使同时按下 Alt 或 Shift 也会触发 -->
+            <button @click.ctrl="onClick">A</button>
+
+            <!-- 仅当按下 Ctrl 且未按任何其他键时才会触发 -->
+            <button @click.ctrl.exact="onCtrlClick">A</button>
+
+            <!-- 仅当没有按下任何系统按键时触发 -->
+            <button @click.exact="onClick">A</button>
+            ```
+    * 鼠标修饰符
+        * `.left`
+        * `.right`
+        * `.middle`
+---------------------------
+### 八、表单输入绑定
+1. 基本用法
+    * 文本
+        ```JavaScript
+        <p>Message is: {{ message }}</p>
+        <input v-model="message" placeholder="Edit me" />
+        ```
+    * 多行文本
+        ```JavaScript
+        <span>Multiline message is: </span>
+        <p style="white-space: pre-line;">{{ message }}</p>
+        <!-- textarea不支持插值，使用v-model -->
+        <textarea v-model="message" placeholder="add multiple lines"></textarea>
+        ```
+    * 复选框
+        ```JavaScript
+        <input type="checkbox" id="checkbox" v-model="checked" />
+        <label for="checkbox">{{ checked }}</label>
+        ```
+        ```JavaScript
+        <div>Checked names: {{ checkedNames }}</div>
+
+        <input type="checkbox" id="jack" value="Jack" v-model="checkedNames">
+        <label for="jack">Jack</label>
+
+        <input type="checkbox" id="john" value="John" v-model="checkedNames">
+        <label for="john">John</label>
+
+        <input type="checkbox" id="mike" value="Mike" v-model="checkedNames">
+        <label for="mike">Mike</label> 
+        ```
+    * 单选按钮
+        ```JavaScript
+        <div>picked: {{ picked }}</div>
+
+        <input type="radio" id="one" value="One" v-model="picked" />
+        <label for="one">One</label>
+
+        <input type="ratio" id="two" value="Two" v-model="picked" />
+        <label for="two">Two</label>
+        ```
+    * 选择器
+        * 单选
+            ```JavaScript
+            <div>selected: {{ selected }}</div>
+
+            <select v-model="selected">
+                <!-- 提供一个控制的选项作为默认 -->
+                <option disabled value="">Please select one</option>
+                <!-- 选项 -->
+                <option>A</option>
+                <option>B</option>
+                <option>C</option>
+            </select>
+            ```
+        * 多选（感觉实用性不如多选框）
+            ```JavaScript
+            <div>selected: {{ selected }}</div>
+
+            <select v-model="selected" multiple>
+                <!-- 提供一个控制的选项作为默认 -->
+                <option disabled value="">Please select one</option>
+                <!-- 选项 -->
+                <option>A</option>
+                <option>B</option>
+                <option>C</option>
+            </select>
+            ```
+        * 值绑定
+            * 单选按钮，复选框和选择器选项，`v-model`绑定的值一般是静态字符串（复选框是布尔值）
+            * `v-bind`可以将选项值绑定为非字符串
+            * 复选框
+                ```JavaScript
+                <input
+                    type="checkbox"
+                    v-model="toggle"
+                    true-value="yes"
+                    false-value="no" />
+                ```
+                ```JavaScript
+                <input
+                    type="checkbox"
+                    v-model="toggle"
+                    :true-value="yes"
+                    :false-value="no" />
+                ```
+            * 单选按钮
+                ```JavaScript
+                <input type="radio" v-model="pick" :value="first" />
+                <input type="radio" v-model="pick" :value="second" />
+                ```
+            * 选择器选型
+                ```JavaScript
+                <select v-model="selected">
+                    <option :value="{ number: 123 }">123</option>
+                </select>
+                ```
+1. 修饰符
+    * `.lazy`
+        * 默认情况`v-model`会在每次`input`事件后更新数据，`.lazy`使得只在每次`change`事件后更新数据
+        ```JavaScript
+        <input v-model.lazy="msg" />
+    * `.number`
+        * 将数字自动转换为数字
+        * 输入框有`type="number"`时`.number`会自动启用
+        ```JavaScript
+        <input v-model.number="age" />
+        ```
+    * `trim`
+        * 除去输入内容两端的空格
+        ```JavaScript
+        <input v-model.trim="msg" />
+        ```
+----------------------
+### 九、生命周期
+1. 注册周期钩子
+    * `mounted()`：组件完成初始渲染并创建DOM节点后运行代码
+    * 常用钩子：`mounted`，`updated`，`unmounted`，`created`
+### 十、侦听器
+1. `watch`
+    * 在每次响应式属性变化时触发一个函数
+    ```JavaScript
+    export default {
+        data() {
+            return {
+                question: '',
+                answer: 'Questions usually contain a question mark.'
+            }
+        },
+        watch: {
+            // 当question变化时，执行函数
+            question(newQuestion, oldQuestion) {
+                if (newQuestion.includes('?')) {
+                    this.getAnswer()
+                }
+            }
+        },
+        methods: {
+            async getAnswer() {
+                this.answer = "Thinking..."
+                try {
+                    const res = await fetch('https://yesno.wtf/api')
+                    this.answer = (await res.jsion()).answer
+                } catch(error) {
+                    this.answer = "Error! Could not reach the API. " + error 
                 }
             }
         }
     }
-1. **计算属性中不要有异步请求或修改DOM**
-### 五、Class与Style绑定
-1. 绑定HTML class
-    * class与其他属性配合
+    ```
     ```JavaScript
-    // script
-    data() {
-        return {
-            isActive: true,
-            hasError: false,
+    <p>
+        Ask a question:
+        <input v-model="question">
+    </p>
+    <p>{{ answer }}</p>
+    ```
+    * `watch`支持把键设置成`.`分隔的路径
+    ```JavaScript
+    watch: {
+        'some.key'(newValue) {
+            //...
         }
     }
-    // template
-    <div 
-        class="static" 
-        :class="{ active: isActive, 'text-danger': hasError }">
-    </div>
     ```
-    * 使用**计算属性**(常用)
+1. 深层侦听器
+    * 深度侦听需要遍历被侦听对象中的所有嵌套的属性
     ```JavaScript
-    data() {
-        return {
-            isActive: true,
-            error: null
-    }
-    },
-    computed: {
-        classObject() {
-            return {
-            active: this.isActive && !this.error,
-            'text-danger': this.error && this.error.type === 'fatal'
+    export default {
+        watch: {
+            someObject: {
+            handler(newValue, oldValue) {
+                // 注意：在嵌套的变更中，
+                // 只要没有替换对象本身，
+                // 那么这里的 `newValue` 和 `oldValue` 相同
+            },
+            deep: true
             }
         }
     }
     ```
-    * class属性绑定数组来渲染多个CSS class
+1. 即时回调
+    * `watch`默认懒执行，只有数据源变化时，才会执行回调
+    * 使用`handler`方法和`immediate: true`选项，强制侦听器创建时立刻执行回调函数
     ```JavaScript
-    data () {
-        return {
-            classA: '',
-            classB: '',
+    export default {
+        // ...
+        watch: {
+            question: {
+                handler(newQuestion) {
+                    // 组件实例创建后立即调用
+                }，
+                // 强制立即执行回调
+                immediate: true
+            }
+        }
+        // ...
+    }
+1. 回调触发时机
+    * 更改响应式状态时，可能会同时触发Vue组件更新和侦听器回调，默认侦听器回调在Vue组件更新**之前**。即侦听器回调访问的DOM是Vue更新前的状态
+    * 指明`flush: 'post'`选项，使侦听器回调在Vue组件更新**之后**
+    ```JavaScript
+    export default {
+        // ...
+        watch: {
+            key: {
+                handler() {},
+                flush: 'post'
+            }
         }
     }
+1. `this.$watch`
+    * 可命令式创建侦听器
+    ```JavaScript
+    export default {
+        created() {
+            this.$watch('question', (newQuestion) => {
+                // ...
+            })
+        }
+    }
+1. 停止侦听器
+    * 侦听器在宿主组件卸载时自动停止
+    * 可通过调用`$watch()`来实现提前停止
+        ```JavaScript
+        const unwatch = this.$watch('foo', callback)
+        // 停止侦听器
+        unwatch()
+        ```
+----------------------
+### 十一、模板引用
+1. `ref`attribute
+    * 允许一个特定的DOM元素霍子组件实例被挂载后，获得对它的直接引用
+1. 访问模板引用
+    * 挂载结束后，所有引用会暴露在`this.$refs`上
+    * 只能在组件挂载后访问模板引用，若在模板中的表达式上访问`$refs.input`，初次渲染为`null`，因为初次渲染时该元素还不存在
+    ```JavaScript
+    <script>
+        export default {
+            mounted() {
+                this.$refs.input.focus()
+            }
+        }
+    </script>
 
-    <div :class="[classA, classB]"></div>
+    <template>
+        <input ref="input" />
+    </template>
     ```
-    
 
 
 
