2022年9月28日 学习

--- a/Django/6.Vue.md
+++ b/Django/6.Vue.md
@@ -646,6 +646,36 @@
         <input ref="input" />
     </template>
     ```
+1. `v-for`中的模板引用
+    ```JavaScript
+    <script>
+        export default {
+            data() {
+                list: [
+                    // ...
+                ]
+            },
+            mounted() {
+                console.log(this.$refs.items)
+            },
+        }
+    </script>
+    
+    <template>
+        <ul>
+            <li v-for="item in list" ref="items">
+                {{ item }}
+            </li>
+        </ul>
+    </template>
+    ```
+    * ref数组不保证与源数据同顺序
+1. 函数模板引用
+    * `ref`attribute可绑定函数，每次组件更新时都被调用，将元素引用作为其第一个参数
+    ```JavaScript
+    <input :ref="(el) => {...}">
+    ```
+    
 
 
 
