2022年9月28日 新增Vue--基础

--- a/Django/6.Vue--基础.md
+++ b/Django/6.Vue--基础.md
@@ -675,142 +675,198 @@
     ```JavaScript
     <input :ref="(el) => {...}">
     ```
-    
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-=================================
-### 其他
-
-1. 事件监控
+1. 组件上的ref
     ```JavaScript
-        <div v-on:click="add"></div>
-    ```
-1. 表单绑定
-    ```JavaScript
-        <input v-model="text">
-        <p>{{ text }}</p>
-    ```
-1. 条件渲染
-    ```JavaScript
-        <h1 v-if="tag">Hello</h1>
-        <h1 v-else>Bye</h1>
-    ```
-1. 列表渲染
-    ```JavaScript
-        <ul>
-            <li v-for="todo in todos" v-bind:key="todo.id">
-                {{ todo.text }}
-            </li>
-        </ul>
-    ```
-    * 源数组增加
-        ```JavaScript
-            this.todos.push(newTodo)
-        ```
-    * 原数组过滤后替换
-        ```JavaScript
-            this.todos = this.todos.filter(...)
-            // 取出todos中tag为true的元素
-            // this.todos = this.todos.filter((t) => t.tag !== false)
+    <script>
+        import Child from './Child.vue'
 
-1. 模板引用和生命周期
-    ```JavaScript
-        <p ref="p">hello</p>
-    ```
-    * 此元素将作为`this.$refs.p`暴露在`this.$refs`上
-    * 只能在组件挂载后才能进行访问
-    * 挂载后的动作，可使用`mounted()`选项定义
-    * 其他生命周期钩子created，updated
-    ```JavaScript
-        <script>
-            export default {
-            mounted() {
-                this.$refs.p.textContent = 'mounted!'
-            }
-            }
-        </script>
-
-        <template>
-            <p ref="p">hello</p>
-        </template>
-    ```
-1. 侦听器
-    * `watch()`选项实现
-    ```JavaScript
         export default {
+            components: {
+                Child
+            },
+            mounted() {
+                // this.$refs.child 即是 <Child /> 组件的实例
+            },
+        }
+    </script>
+
+    <template>
+        <Child ref="child" />
+    </template>
+    ```
+    * 上例子中，被引用的组件实例和该子组件的`this`完全一致
+    * 正常情况下，应优先使用`props`和`emit`接口实现父子组件交互
+    * `expose`选项用于限制对子组件实例的访问，限制了对外暴露的内容
+        ```JavaScript
+        export default {
+            expose: ['publicData', 'publicMethod'],
             data() {
                 return {
-                count: 0
+                    publicData: 'foo',
+                    privateData: 'bar'
                 }
             },
-            watch: {
-                count(newCount) {
-                // 没错，console.log() 是一个副作用
-                console.log(`new count is: ${newCount}`)
+            methods: {
+                publicMethod() {
+                    // ...
+                },
+                privateMethod() {
+                    // ...
                 }
             }
         }
-    ```
-1. 组件
-    ```JavaScript
-        <script>
-            import ChildComp from './ChildComp.vue'
-
-            export default {
-                components: {
-                    ChildComp,
+-------------------------------
+### 十二、组件
+1. 定义组件
+    * 单文件组件（SFC）：将Vue组件定义在单独的一个`.vue`文件中
+        * 使用构建步骤
+            ```JavaScript
+            <script>
+                export default {
+                    data() {
+                        return {
+                            count: 0
+                        }
+                    }
                 }
+            </script>
+
+            <template>
+                <button @click="count++">Clicked {{ count }} times.</button>
+            </template>
+            ```
+        * 不使用构建步骤
+             ```JavaScript
+            <script>
+                export default {
+                    data() {
+                        return {
+                            count: 0
+                        }
+                    },
+                    template: `
+                        <button @click="count++">Clicked {{ count }} times.</button>
+                    `
+                }
+            </script>
+            ```       
+1. 组件使用
+    * 使用子组件时，需要在父组件中导入它，子组件会以默认导出的方式被暴露给外部
+    * 使用`component`选项对导入的子组件进行注册
+    ```JavaScript
+    <script>
+        import ButtonCounter from './ButtonCounter.vue'
+
+        export default {
+            components: {
+                ButtonCounter,
+            },
+        }
+    </script>
+
+    <template>
+        <h1>Here are 3 child components</h1>
+        <ButtonCounter />
+        <ButtonCounter />
+        <ButtonCounter />
+    </template>
+    ```
+    * 每使用一个组件，创建一个新的实例，各自维护着自己的状态。对于上边的例子，不同的`ButtonCounter`维护着不同的`count`
+    * 子组件的标签名格式
+        * 单文件组件中，推荐使用`PascalCase`标签名，与原生HTML元素区分开
+            ```JavaScript
+            <ButtonCounter />
+            ```
+        * 直接在DOM中书写模板，使用`kebab-case`形式显示地关闭组件的标签
+            ```JavaScript
+            <ButtonCounter></ButtonCounter>
+            ```
+1. 传递props
+    * `props`是特殊的attribute。在子组件中通过`props`选项声明注册的属性，可在父组件中把数据传回给子组件
+    ```JavaScript
+    <!-- BlogPost.vue -->
+    <script>
+        export default {
+            props: ['title']
+        }
+    </script>
+
+    <template>
+        <h3>{{ title }}</h3>
+    </template>
+    ```
+    * 当prop注册后，在父组件中可以以自定义的attribute的形式传递数据给它
+    ```JavaScript
+    <!-- 父组件中 -->
+    <BlogPost title="My First Blog" />
+    ```
+1. 监听事件
+    * 子组件可通过`$emit`方法抛出一个事件，父组件中使用`v-on`或`@`来选择性监听子组件上抛出的事件
+        ```JavaScript
+        <!-- BlogPost.vue -->
+        // ...
+        <template>
+            <div class="blog-post">
+                <h4>{{ title }}</h4>
+                <button @click="$emit('enlarge-text')">Enlarge text</button>
+            </div>
+        </template>
+        ```
+        ```JavaScript
+        <!-- 父组件 -->
+        data() {
+            posts: [...],
+            postFontSize: 1
+        }
+
+        // ...
+        <BlogPost
+            ...
+            @enlarge-text="postFontSize += 0.1"
+        />
+        ```
+    * 子组件也可通过`emits`选项来声明抛出的事件
+        ```JavaScript
+        <script>
+            export default {
+                props: ['title'],
+                emits: ['enlarge-text']
             }
         </script>
-
+        ```
+1. 插槽分配内容
+    * `<slot>`作为一个占位符，父组件传递进来的内容就会渲染在`<slot>`
+        ```JavaScript
+        <!-- AlertBox -->
         <template>
-            <ChildComp></ChildComp>
+            <div class="alert-box">
+                <strong>This is an Error for Demo Purposes</strong>
+                <slot />
+            </div>
         </template>
-    ```
-1. Props
-    * 子组件可通过props从父组件接收动态数据
-    ```JavaScript
-        // 子组件中
-        export default {
-            props: {
-                msg: String
-            }
-        }
-    ```
-    * 声明后，`msg`prop暴露在`this`上，子组件能在模板中使用
-    * 父组件中可以使用`v-bind`语法给prop传递动态值
-1. Emits
-    * 子组件向父组件触发事件
-    ```JavaScript
-        export default {
-            // 声明触发的时间
-            emits: ['response'],
-            created() {
-                // 带参数触发
-                this.$emit('response', 'hello from child')
-            }
-        }
-    ```
-    * 父组件可使用`v-on`监听子组件触发的事件
-    ```JavaScript
-        <ChildComp @response="(msg) => ChildMsg = msg" />
-    ```
-1. 插槽（slots）
-    * 父组件将模板片段传给子组件
+        ```
+        ```JavaScript
+        <!-- 父组件 -->
+        <template>
+            <AlertBox>
+            Something bad happened.
+            </AlertBox>
+        </template>    
+        ```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
