2022年10月18日 提交历史学习

--- a/Django/6.Vue--基础.md
+++ b/Django/6.Vue--基础.md
@@ -853,6 +853,17 @@
             </AlertBox>
         </template>    
         ```
+1. 动态组件
+    * 适用于组件间来回切换
+    * 使用`<component>`元素和`is`attribute实现
+        ```JavaScript
+        <!-- currentTab改变时组件也改变 -->
+        <component :is="currentTab"></component>
+        ```
+    * 传入`:is`的值可以为：
+        * 被注册的组件的名字
+        * 导入的组件对象
+        
 
 
 
